# querymancer

./: .gitignore  README.md
.claude/agents/: architecture-doc-writer.md  demo-question-generator.md  eval-runner.md  prompt-tuner.md  sample-db-generator.md  schema-indexer.md  sql-validator.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  keepalive.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py  models.py
backend/app/core/: agent.py  config.py  embed.py  executor.py  introspect.py  llm.py  prompt.py  ratelimit.py  retriever.py  safety.py  sessions.py
backend/app/routers/: query.py  schema.py
backend/cli/: reindex.py
backend/databases/: hr.db  ipl.db  seed_hr.py  seed_ipl.py
backend/scripts/: seed_supabase.sql  smoke_coverage.py  smoke_embed.py  smoke_gemini.py  smoke_multiturn.py  smoke_query.py  smoke_rank_fix.py
backend/tests/: conftest.py  test_agent.py  test_app.py  test_executor.py  test_llm.py  test_prompt.py  test_safety.py
docs/: architecture.md
eval/: cases.yaml  run_eval.py
eval/reports/: 2026-05-14T18-03-05Z-73f71191.md  2026-05-14T18-07-05Z-73f71191.md  2026-05-14T18-32-27Z-73f71191.md  2026-05-15T11-51-47Z-7f8a08ce.jsonl  2026-05-15T11-51-47Z-7f8a08ce.md  2026-05-16T11-12-07Z-77c58cc2.jsonl  2026-05-16T11-12-07Z-77c58cc2.md  2026-05-17T15-35-16Z-4647a3ea.jsonl  2026-05-17T15-35-16Z-4647a3ea.md  2026-05-18T10-18-32Z-043f5f3c.jsonl  2026-05-18T10-18-32Z-043f5f3c.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts
(+28 files in other folders)
